# QtPass

./: .gitignore  CMakeLists.txt  README.md  configdialog.cpp  configdialog.ui  mainwindow.cpp  mainwindow.h  passworddialog.cpp  util.cpp  util.h
localization/: localization_ar_MA.ts  localization_cs_CZ.ts  localization_de_DE.ts  localization_de_LU.ts  localization_el_GR.ts  localization_en_GB.ts  localization_en_US.ts  localization_es_ES.ts  localization_fr_BE.ts  localization_fr_FR.ts  localization_fr_LU.ts  localization_gl_ES.ts  localization_he_IL.ts  localization_hu_HU.ts  localization_it_IT.ts  localization_lb_LU.ts  localization_nl_BE.ts  localization_nl_NL.ts  localization_pl_PL.ts  localization_ru_RU.ts  localization_sv_SE.ts  localization_zh_CN.ts
main/: CMakeLists.txt
src/: CMakeLists.txt
